fix not collapsing bug

--- a/style.css
+++ b/style.css
@@ -91,6 +91,10 @@ li {
     padding-top: .8rem;
 }
 
+.nav-link {
+    display: block;
+}
+
 .navbar-dark .navbar-nav .nav-link.active, 
 .navbar-dark .navbar-nav .nav-link:hover {
     color: #111111;
